[gd_scene load_steps=5 format=3 uid="uid://cu8p3or0ch6u2"]

[ext_resource type="Script" path="res://Scripts/Main_menu/main_menu.gd" id="1_050ko"]
[ext_resource type="Texture2D" uid="uid://de4vr1nthb22a" path="res://Assets/Main_menu/main_menu.png" id="1_qpe6t"]
[ext_resource type="Script" path="res://Scripts/Main_menu/Settings/Audio/sound_slider.gd" id="2_dm3wg"]
[ext_resource type="AudioStream" uid="uid://lglish8byr7m" path="res://Assets/Audio/Music/natlan_battle.mp3" id="4_f5e6t"]

[node name="Main_Game_menu" type="Node"]
script = ExtResource("1_050ko")

[node name="Main_menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -6.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TextureRect" type="TextureRect" parent="Main_menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 2.44446
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_qpe6t")
expand_mode = 3

[node name="Buttons" type="VBoxContainer" parent="Main_menu"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -173.0
offset_right = 120.0
offset_bottom = -50.0
grow_vertical = 0
theme_override_constants/separation = 15

[node name="Play" type="Button" parent="Main_menu/Buttons"]
layout_mode = 2
text = "Play"

[node name="Options" type="Button" parent="Main_menu/Buttons"]
layout_mode = 2
text = "Options"

[node name="Quit" type="Button" parent="Main_menu/Buttons"]
layout_mode = 2
text = "Quit"

[node name="Play_Menu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 1146.0
offset_bottom = 646.0

[node name="TextureRect" type="TextureRect" parent="Play_Menu"]
layout_mode = 0
offset_right = 1148.44
offset_bottom = 646.0
texture = ExtResource("1_qpe6t")
expand_mode = 3

[node name="Panel" type="Panel" parent="Play_Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Play_Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="New_game" type="Button" parent="Play_Menu/VBoxContainer"]
layout_mode = 2
text = "New Game"

[node name="Return_main_play" type="Button" parent="Play_Menu/VBoxContainer"]
layout_mode = 2
text = "Return"

[node name="Options_Menu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -6.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TextureRect" type="TextureRect" parent="Options_Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 2.44446
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_qpe6t")
expand_mode = 3

[node name="Panel" type="Panel" parent="Options_Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Volume_Settings" type="VBoxContainer" parent="Options_Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -159.0
offset_top = -68.0
offset_right = 159.0
offset_bottom = 69.0
grow_horizontal = 2
grow_vertical = 2

[node name="Slider_settings" type="VBoxContainer" parent="Options_Menu/Volume_Settings"]
layout_mode = 2

[node name="Master_volume" type="Label" parent="Options_Menu/Volume_Settings/Slider_settings"]
layout_mode = 2
text = "Master Volume"

[node name="Master_slider" type="HSlider" parent="Options_Menu/Volume_Settings/Slider_settings"]
layout_mode = 2
max_value = 1.0
step = 0.001
script = ExtResource("2_dm3wg")
bus_name = "Master"

[node name="Music_volume" type="Label" parent="Options_Menu/Volume_Settings/Slider_settings"]
layout_mode = 2
text = "Music Volume"

[node name="Music_slider" type="HSlider" parent="Options_Menu/Volume_Settings/Slider_settings"]
layout_mode = 2
max_value = 1.0
step = 0.001
script = ExtResource("2_dm3wg")
bus_name = "Music"

[node name="Effects_volume" type="Label" parent="Options_Menu/Volume_Settings/Slider_settings"]
layout_mode = 2
text = "Effects Volume"

[node name="Effects_slider" type="HSlider" parent="Options_Menu/Volume_Settings/Slider_settings"]
layout_mode = 2
max_value = 1.0
step = 0.001
script = ExtResource("2_dm3wg")
bus_name = "Effects"

[node name="Return_button" type="Button" parent="Options_Menu"]
layout_mode = 2
offset_left = 414.0
offset_top = 561.0
offset_right = 732.0
offset_bottom = 592.0
text = "return"

[node name="bg_music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_f5e6t")
bus = &"Music"

[connection signal="pressed" from="Main_menu/Buttons/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Main_menu/Buttons/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Main_menu/Buttons/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Play_Menu/VBoxContainer/Return_main_play" to="." method="_on_return_main_play_pressed"]
[connection signal="pressed" from="Options_Menu/Return_button" to="." method="_on_return_button_pressed"]
